<resources>
    <string name="app_name">Todolist</string>
    <string name="welcome">Bienvenido</string>
    <string name="my_task">Mis Tareas</string>
    <string name="create_user">Crear usuario</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="create">Crear</string>
    <string name="enter">Ingresar</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="title_unregister">Aun no tengo un usuario.</string>
    <string name="signup"><u>Registrarme</u></string>
    <string name="add_image">Añadir imágenes</string>
    <string name="save_text">Guardar</string>
    <string name="require_fields">Debes llenar los campos con *</string>
    <string name="task_name">Nombre de la tarea*</string>
    <string name="task_description">Descripción*</string>
    <string name="share">Compartir</string>
    <string name="edit">Editar</string>
    <string name="delete">Delete</string>
    <string name="user_created_success">Usario creado con exito!</string>
    <string name="password_not_match">Las contraseñas no coinciden</string>
    <string name="user_exist">El usuario ya existe!</string>
    <string name="error_creating_user">Ocurrió un error creando el usuario, intenta más tarde.</string>
    <string name="error_empty_fields">Debe llenar todos los campos.</string>
    <string name="error_user_password_not_valid">Usuario o contraseña no validos</string>
    <string name="prefs_file">com.squadmarkers.todolist.PREFERENCE_FILE_KEY</string>
</resources>