<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/rds_spacing_4"
    android:layout_marginEnd="@dimen/rds_spacing_4"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textAppearance="@style/DsBaseText.Title5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rds_spacing_10"
            android:background="@drawable/ds_bg_edittext"
            android:hint="@string/user"
            android:inputType="text"
            android:padding="@dimen/rds_spacing_2"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rds_spacing_4"
            android:background="@drawable/ds_bg_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/rds_spacing_2"
            app:layout_constraintTop_toBottomOf="@+id/user_edittext" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rds_spacing_5"
            android:textAlignment="center"
            android:textAppearance="@style/DsBaseText.Label1.Negative"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext"
            tools:text="Usuario o contraseña no validos"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rds_spacing_10"
            android:padding="@dimen/rds_spacing_2"
            android:text="@string/enter"
            android:textColor="@color/ds_primary_B"
            android:background="@drawable/ds_bg_task"
            style="?android:attr/borderlessButtonStyle"
            app:backgroundTint="@color/ds_content_E"
            app:layout_constraintTop_toBottomOf="@+id/error_message" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rds_spacing_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_continue">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signup_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_unregister"
                android:textAlignment="center"
                android:textAppearance="@style/DsBaseText.Label1"
                app:layout_constraintEnd_toStartOf="@+id/signup_link"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signup_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/rds_spacing_2"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textAppearance="@style/DsBaseText.Label1.Positive"
                app:layout_constraintStart_toEndOf="@+id/signup_description"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>