<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/rds_spacing_4"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/icon_close"
        android:src="@drawable/ds_ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/rds_spacing_4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rds_spacing_4"
        android:paddingTop="@dimen/rds_spacing_4"
        android:paddingBottom="@dimen/rds_spacing_4"
        android:backgroundTint="@color/ds_content_C"
        android:hint="@string/task_name"
        app:layout_constraintTop_toBottomOf="@+id/icon_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/rds_spacing_2"
        android:paddingBottom="@dimen/rds_spacing_4"
        android:layout_marginTop="@dimen/rds_spacing_4"
        android:backgroundTint="@color/ds_content_C"
        android:hint="@string/task_description"
        app:layout_constraintTop_toBottomOf="@+id/task_name"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rds_spacing_5"
        android:text="@string/require_fields"
        android:textAlignment="center"
        android:textAppearance="@style/DsBaseText.Label1.Negative"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/task_description"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_images"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/rds_spacing_4"
        app:layout_constraintTop_toBottomOf="@+id/error_message"
        app:layout_constraintBottom_toTopOf="@+id/buttons"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.squadmarkers.todolist.ui.common.customview.AddImagesView
            android:id="@+id/btnAddImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rds_spacing_4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/rds_spacing_4"
            android:background="@drawable/ds_bg_task"
            android:padding="@dimen/rds_spacing_2"
            android:text="@string/save_text"
            android:textColor="@color/ds_primary_B"
            style="?android:attr/borderlessButtonStyle"
            app:backgroundTint="@color/ds_content_E"
            app:layout_constraintEnd_toStartOf="@+id/content_button_share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddImages" />

        <LinearLayout
            android:id="@+id/content_button_share"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_continue"
            app:layout_constraintBottom_toBottomOf="@+id/btn_continue">

            <ImageView
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/rds_spacing_4"
                android:background="@drawable/ds_bg_task"
                android:padding="@dimen/rds_spacing_3"
                android:src="@drawable/ds_ic_share" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>